--- a/PersonsCRM/WebUI/WebUI.csproj
+++ b/PersonsCRM/WebUI/WebUI.csproj
@@ -159,9 +159,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\PersonViewModel.cs" />
-    <Compile Include="Models\PhoneViewModel.cs" />
-    <Compile Include="Models\WebUIContext.cs" />
+    <Compile Include="fonts\Models\PersonViewModel.cs" />
+    <Compile Include="fonts\Models\PhoneViewModel.cs" />
+    <Compile Include="fonts\Models\WebUIContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\NinjectDependencyResolver.cs" />
   </ItemGroup>
@@ -271,7 +271,7 @@
     <Content Include="Views\Person\Index.cshtml" />
     <Content Include="Views\Person\Edit.cshtml" />
     <Content Include="Views\Person\Grid.cshtml" />
-    <Content Include="Views\Home\Calculator.cshtml" />
+    <Content Include="Views\Shared\Calculator.cshtml" />
     <Content Include="Views\Shared\_SpaLayout.cshtml" />
     <Content Include="Views\SinglePage\Index.cshtml" />
     <Content Include="Views\SinglePage\Edit.cshtml" />
