--- a/PersonsCRM/WebUI/WebUI.csproj
+++ b/PersonsCRM/WebUI/WebUI.csproj
@@ -159,9 +159,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="fonts\Models\PersonViewModel.cs" />
-    <Compile Include="fonts\Models\PhoneViewModel.cs" />
-    <Compile Include="fonts\Models\WebUIContext.cs" />
+    <Compile Include="Models\PersonViewModel.cs" />
+    <Compile Include="Models\PhoneViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\NinjectDependencyResolver.cs" />
   </ItemGroup>
